# agent-skeleton

./: .env.example  .gitignore  CLAUDE.md  HACKATHON.md  README.md  REPO_FEEDBACK.md  __init__.py  a2a_runtime.py  agent.card.json  base.py  config.py  container_runner.py  dtrc-hackathon.md  executor.py  handler.py  llm_loop.py  prompt.py  pyproject.toml  requirements.txt  serve.py  spec.py  tool_schemas.py  tools.py
generator/: __init__.py  __main__.py  card_builder.py  cli.py  models.py  oasf.py  prompt_builder.py  repo_emitter.py
generator/examples/: weather_bridge.answers.json
geo_context_agent/: .env.example  README.md  agent.card.json  config.py  handler.py  handler_executor.py  prompt.py  pyproject.toml  tool_schemas.py
geo_context_agent/tools/: __init__.py  contamination.py  elevation.py  flood_zone.py  geocode.py  helpers.py  nearby_features.py  registry.py
skills/: __init__.py  _common.py  air_quality.py  construction.py  contamination.py  elevation.py  flood_zone.py  geocode.py  inaturalist.py  occurrences.py  protected_areas.py  proximity.py  registry.py  research.py  satellite.py  soil.py  species_habitat.py  water.py  wetlands.py  wildfire.py
skills/tests/: test_air_quality.py  test_construction.py  test_handler.py  test_inaturalist.py  test_occurrences.py  test_ported_skills.py  test_protected_areas.py  test_research.py  test_satellite.py  test_soil.py  test_species_habitat.py  test_water.py  test_wetlands.py  test_wildfire.py
system_tools/: __init__.py  call_endpoint.py  preset_tools.py
tests/: test_generator.py  test_manager.py  test_operations.py  test_preset_tools.py  test_wrapper.py
