[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skeleton"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # A2AStarletteApplication needs starlette + sse-starlette (+ fastapi), which
    # live in a2a-sdk's optional `http-server` extra. Pin exactly: newer a2a-sdk
    # releases moved a2a.server.apps. Only needed to SERVE — the Path-A engine and
    # `serve check` import and run without it (see a2a_runtime's import guard).
    "a2a-sdk[http-server]==0.3.2",
    "openai>=1.40",
    "uvicorn>=0.30",
]

# pyproject.toml lives *inside* the package directory, so map the `agent_skeleton`
# import package to "." (this directory). Subpackages must be listed explicitly:
# with package-dir mapped to ".", setuptools find-discovery would treat
# system_tools/ and endpoint_wrapper/ as *top-level* packages, so we name them here.
#
# `skills` is THIS agent's data-source package (imported by handler.py). It is a
# real top-level directory (./skills), so it is listed here to guarantee it ships
# with `pip install .` and is importable regardless of the working directory —
# not only under editable installs. handler.py is the custom-handler entry file
# and is loaded by path (serve-handler --file handler.py), so it needs no module
# entry. (`skills.tests` is intentionally omitted — tests aren't shipped.)
[tool.setuptools]
packages = [
    "agent_skeleton",
    "agent_skeleton.system_tools",
    "agent_skeleton.endpoint_wrapper",
    "skills",
]

[tool.setuptools.package-dir]
agent_skeleton = "."
